finished all use cases aside from auth
