# Backend/src/main/java/com/example/frogcrew/assignment/dto/CrewListDto.java
@@ -1,0 +1,13 @@
+package com.example.frogcrew.assignment.dto;
+
+import java.util.List;
+
+public record CrewListDto(
+        Long gameId,
+        String gameStart,
+        String gameDate,
+        String venue,
+        String opponent,
+        List<CrewAssignmentDto> crewedMembers
+) {
+}
